
syntax="proto3";

package calculator;

option java_package="com.proto.calculator";
option java_multiple_files=true;

message InputNumbers{
  int32 num1=1;
      int32 num2=2;
}

message CalculatorRequest{
  InputNumbers input_numbers=1;
}

message  CalculatorResponse{
  int32 result=1;
}

message PrimeDecompositionServerStreamRequest{
   int32 number=1;
}
message PrimeDecompositionServerStreamResponse{
    int32 result=1;
}

message  InputNumersRequest{
  int32 number=1;
}
message  AverageResponse{
  double average=1;
}

message FindMaximumRequest{
    int32 number=1;
}
message FindMaximumResponse{
  int32 max_value=1;
}

message SqureRootRequest{
  int32 number=1;
}

message SqureRootResponse{
  double number_root=1;
}

service  CalculatorService
{
  rpc sum(CalculatorRequest) returns (CalculatorResponse) {};

  rpc primeDecomposition(PrimeDecompositionServerStreamRequest)
      returns (stream PrimeDecompositionServerStreamResponse){};

  rpc CalculateAvg(stream InputNumersRequest) returns (AverageResponse){};

  rpc FindMaximum(stream FindMaximumRequest) returns (stream FindMaximumResponse){};


  // Error handling in gRpc
  // this rpc will throw exception if the sent number is negative.
  rpc SqureRoot(SqureRootRequest) returns (SqureRootResponse){};



}